# rp2350_test

./: .gitignore  Cargo.toml  flake.nix  run.nu
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4ksi92wbhd8amyr7vdlgwxvjfqcxzdr5-source  rhly7cqfyjfdd5za1h5gdwq5h4c2ism7-source
.zed/: settings.json
blink/: Cargo.toml
blink/src/: main.rs
boards/: Cargo.toml
boards/src/: clocks.rs  lib.rs  pins.rs
boards/src/pin_io/: mod.rs
boards/src/pin_io/iic/: mod.rs
dht11/: Cargo.toml
dht11/src/: main.rs
macros/src/: init.rs  lib.rs
